Flyttet BarnUnder18AarData og la til tester for opensearch